# INK_AI

./: CONTACT.md  DEMO.md  LICENSE_STATUS.md  QUICKSTART.md  README.md  RELEASE_NOTES.md  SCOPE.md  SECURITY.md
docs/: OVERVIEW.md  POLICY_COMPILER_SPEC.md  PROOF_OF_LIFE_PACKET.md  REPO_STRUCTURE.md  SYSTEM_BREAKDOWN.md  UPGRADE_PRINCIPLES.md
examples/: HELLO_WORLD.md  README.md
references/: README.md
specs/agi/docs/: AGI_Constitutional_Doctrine_v7.md  AGI_SPLUS_ACCEPTANCE_GATE_v7.md  AGI_v7_Consolidated_Spec.md  RECONCILE_RECEIPT_SPEC.md
specs/agi/law/: agi_law_root.v7.yaml
specs/agi/schemas/: agi.authority_decision.v7.schema.json  agi.fixture_case.v7.schema.json  agi.integrity_certification.v7.schema.json  agi.intent_envelope.v7.schema.json  agi.reconcile_receipt.v7.schema.json  agi.replay_proof.v7.schema.json  agi.result_receipt.v7.schema.json
specs/facts_plane/: CONTRIBUTING.md  PUBLIC_UPGRADE_PRINCIPLES.md  README.md  TEST_VECTORS.md  VERSIONING.md
tools/fp_verify/: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
tools/fp_verify/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
tools/fp_verify/.github/workflows/: ci.yml
tools/fp_verify/docs/: boundary.md  bundle-structure.md  cli.md  index.md  reason-codes.md
tools/fp_verify/examples/ambiguous_provider_result/: README.md
tools/fp_verify/examples/break_glass_without_incident/: README.md
tools/fp_verify/examples/happy_path_payment_release/: README.md
tools/fp_verify/examples/rogue_wire_transfer_bundle/: README.md
(+93 files in other folders)
