[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fp-verify"
version = "0.1.0"
description = "Offline verifier for high-risk machine actions"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Facts Plane"}]
license = "Apache-2.0"
dependencies = []

[project.scripts]
fp-verify = "fp_verify.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fp_verify*"]
